linux-6.1 (6.1.94-1~deb11u1) UNRELEASED; urgency=medium

  * Rebuild for bullseye:
    - Disable building linux-libc-dev and unversioned tools packages
    - Disable building installer udebs and remove build-dependency on
      kernel-wedge

 -- Ben Hutchings <benh@debian.org>  Thu, 27 Jun 2024 01:41:54 +0200

linux (6.1.94-1~bpo11+1) bullseye-backports; urgency=medium

  * Rebuild for bullseye-backports:
    - Set ABI to 0.deb11.22

 -- Ben Hutchings <benh@debian.org>  Thu, 27 Jun 2024 00:39:03 +0200

linux (6.1.94-1) bookworm; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v6.x/ChangeLog-6.1.91
    - [arm64,armhf] dmaengine: pl330: issue_pending waits until WFP state
    - dmaengine: Revert "dmaengine: pl330: issue_pending waits until WFP state"
    - wifi: nl80211: don't free NULL coalescing rule
    - eeprom: at24: Use dev_err_probe for nvmem register failure
    - eeprom: at24: Probe for DDR3 thermal sensor in the SPD case
    - eeprom: at24: fix memory corruption race condition (CVE-2024-35848)
    - Bluetooth: qca: add support for QCA2066
    - mm/hugetlb: add folio support to hugetlb specific flag macros
    - mm: add private field of first tail to struct page and struct folio
    - mm/hugetlb: add hugetlb_folio_subpool() helpers
    - mm/hugetlb: add folio_hstate()
    - mm/hugetlb_cgroup: convert __set_hugetlb_cgroup() to folios
    - mm/hugetlb_cgroup: convert hugetlb_cgroup_from_page() to folios
    - mm/hugetlb: convert free_huge_page to folios
    - mm/hugetlb_cgroup: convert hugetlb_cgroup_uncharge_page() to folios
    - mm/hugetlb: fix missing hugetlb_lock for resv uncharge
    - kbuild: refactor host*_flags
    - kbuild: specify output names separately for each emission type from rustc
    - cifs: use the least loaded channel for sending requests
    - smb3: missing lock when picking channel
    - [armhf] pinctrl: pinctrl-aspeed-g6: Fix register offset for pinconf of
      GPIOR-T